# template-research

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  FIGURE_GENERATION_CONTRACT.md  FOUNDATIONS.md  Makefile  README.md  RESEARCH.md  TOOLCHAIN.md  TOOL_MODULES.md  pyproject.toml  tool_catalog.yaml
.github/ISSUE_TEMPLATE/: data_change.md  research_task.md
.github/workflows/: ci.yml
adapters/academic_research_skills/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/autofigure_edit/: README.md  adapter.yaml  limitations.md  usage.md
adapters/citation_check/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/duckdb/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/dvc/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/latex/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/livefigure/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/mlflow/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/paper_search/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/paperqa2/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/paperspine/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/papervizagent/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/quarto/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/refchecker/: README.md  adapter.yaml  installation.md  limitations.md  usage.md
adapters/tavily/: README.md  adapter.yaml  usage.md  (+2 more)
configs/: evaluation.yaml  features.yaml  model.yaml  modules.yaml
docs/: DATA_DICTIONARY.md  DECISIONS.md  PROJECT_SPEC.md  REPRODUCIBILITY.md  RESEARCH_STACK.md
legacy/: migration_notes.md
metadata/: data_manifest.csv  source_registry.csv
release_notes/: v0.1.0-foundry.md
scripts/: audit_figure_contracts.py  audit_registry.py  audit_tool_modules.py  bootstrap_industry_program.py  bootstrap_research_os.py  build_data_figure.py  build_paperviz_input.py  diff_pack_upgrade.py  export_pack.py  export_project_capabilities.py  list_packs.py  list_profiles.py  list_tools.py  rename_project.py  validate_foundry.py  validate_pack.py
tests/: test_figure_contracts.py  test_foundry.py  test_validate.py
tool_fabric/: TOOL_FABRIC.md
(+123 files in other folders)
