[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "research-project"
version = "0.1.0"
description = "Reproducible research project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9",
  "pandas>=2.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
file-ingestion = ["openpyxl>=3.1"]
literature = ["bibtexparser>=1.4"]
web-industry = ["beautifulsoup4>=4.12", "feedparser>=6.0", "lxml>=5.0", "requests>=2.32"]
data-experiment = [
  "scikit-learn>=1.5",
  "seaborn>=0.13",
  "shap>=0.46",
  "statsmodels>=0.14",
]
data-versioning = ["dvc>=3.0"]
publication-output = ["jupyterlab>=4.0", "nbformat>=5.10"]

# Compatibility aliases for early template users.
modeling = ["scikit-learn>=1.5"]
visualization = ["seaborn>=0.13"]
reporting = ["jupyterlab>=4.0"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.11",
  "pre-commit>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/research_project"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebooks", "data", "outputs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
